# offline-ab

./: .dockerignore  .gitignore  Dockerfile  README.md  create_env.sh  pyproject.toml  run_docker.cmd  run_jupyter.ps1  test.ipynb
.github/workflows/: ci.yml
offline_ab/: __init__.py  abcore.py  configreader.py  estimation.py  estimators.py  gapfillings.py  selection.py  src.py  vardecreasers.py  visualization.py
offline_ab/pipeline/: estimation.py
offline_ab/transformers/: estimators.py  vardecreasers.py
offline_ab/utils/: configreader.py  visualization.py
