[tool.poetry]
name = "offline-ab"
version = "0.0.1"
description = "This module is intended for evaluation of offline experiments and is purely exploratory in nature."
authors = ["Mikhail Repin <repin.mihail.09@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.3"
pytest = "7.2.0"
pytest-xdist = "^3.2.1"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["*.ipynb"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
altair = "==5.4.1"
antlr4-python3-runtime = "==4.9.3"
anyio = "==4.9.0"
asttokens = "==2.2.1"
attrs = "==24.2.0"
backcall = "==0.2.0"
"backports.tarfile" = "==1.2.0"
blinker = "==1.8.2"
boto3 = "==1.34.154"
botocore = "==1.34.154"
Bottleneck = "==1.4.0"
build = "==1.2.2.post1"
CacheControl = "==0.14.3"
cachetools = "==5.5.0"
catboost = "==1.2.5"
certifi = "==2024.8.30"
charset-normalizer = "==3.3.2"
cleo = "==2.1.0"
click = "==8.1.3"
colorama = "==0.4.6"
comm = "==0.1.3"
contourpy = "==1.2.0"
crashtest = "==0.4.1"
cycler = "==0.12.1"
Cython = "==3.0.11"
databricks = "==0.2"
databricks-sdk = "==0.31.1"
databricks-sql-connector = "*"
debugpy = "==1.6.7"
decorator = "==5.1.1"
Deprecated = "==1.2.13"
dill = "==0.3.8"
distlib = "==0.3.9"
dulwich = "==0.22.8"
et-xmlfile = "==1.1.0"
etna = "==2.7.1"
exceptiongroup = "==1.2.2"
executing = "==1.2.0"
fastjsonschema = "==2.21.1"
filelock = "==3.18.0"
findpython = "==0.6.3"
Flask = "==2.2.2"
Flask-SQLAlchemy = "==3.0.2"
fonttools = "==4.50.0"
gitdb = "==4.0.11"
GitPython = "==3.1.43"
google-auth = "==2.34.0"
graphviz = "==0.20.3"
greenlet = "==2.0.1"
h11 = "==0.16.0"
holidays = "==0.54"
httpcore = "==1.0.9"
httpx = "==0.28.1"
hydra-slayer = "==0.2.0"
idna = "==3.8"
importlib-metadata = "==6.0.0"
importlib_resources = "==6.3.1"
installer = "==0.7.0"
ipykernel = "==6.22.0"
ipython = "==8.12.0"
itsdangerous = "==2.1.2"
"jaraco.classes" = "==3.4.0"
"jaraco.context" = "==6.0.1"
"jaraco.functools" = "==4.1.0"
jedi = "==0.18.2"
Jinja2 = "==3.1.2"
jmespath = "==1.0.1"
joblib = "==1.2.0"
jsonschema = "==4.23.0"
jsonschema-specifications = "==2023.12.1"
jupyter_client = "==8.1.0"
jupyter_core = "==5.3.0"
keyring = "==25.6.0"
kiwisolver = "==1.4.5"
llvmlite = "==0.43.0"
loguru = "==0.5.3"
lz4 = "==4.3.3"
markdown-it-py = "==3.0.0"
MarkupSafe = "==2.1.1"
matplotlib = "==3.8.3"
matplotlib-inline = "==0.1.6"
mdurl = "==0.1.2"
more-itertools = "==10.7.0"
msgpack = "==1.1.0"
narwhals = "==1.7.0"
nest-asyncio = "==1.5.6"
numba = "==0.60.0"
numpy = "==1.24.3"
oauthlib = "==3.2.2"
omegaconf = "==2.3.0"
openpyxl = "==3.1.5"
packaging = ">=20,<26"
pandas = "==1.3.3"
parso = "==0.8.3"
patsy = "==0.5.6"
pbs-installer = "==2025.4.9"
pickleshare = "==0.7.5"
pillow = "==10.2.0"
pkginfo = "==1.12.1.2"
platformdirs = "==4.3.8"
plotly = "==5.23.0"
pmdarima = "==2.0.4"
poetry-core = "==2.1.3"
prompt-toolkit = "==3.0.38"
protobuf = "==5.28.1"
psutil = "==5.9.4"
pure-eval = "==0.2.2"
py4j = "==0.10.9"
pyarrow = "==16.1.0"
pyasn1 = "==0.6.1"
pyasn1_modules = "==0.4.1"
pydeck = "==0.9.1"
Pygments = "==2.14.0"
pyparsing = "==3.1.2"
pyproject_hooks = "==1.2.0"
pyspark = "==3.1.2"
python-dateutil = "==2.8.2"
pytz = "==2023.3"
PyYAML = "==6.0.1"
pyzmq = "==25.0.2"
RapidFuzz = "==3.13.0"
referencing = "==0.35.1"
requests = "==2.32.3"
requests-toolbelt = "==1.0.0"
rich = "==13.8.1"
rpds-py = "==0.20.0"
rsa = "==4.9"
ruptures = "==1.1.9"
s3transfer = "==0.10.2"
scikit-learn = "==1.3.2"
scipy = "==1.10.1"
seaborn = "==0.13.2"
shellingham = "==1.5.4"
six = "==1.16.0"
smmap = "==5.0.1"
sniffio = "==1.3.1"
SQLAlchemy = "==1.4.46"
stack-data = "==0.6.2"
statsmodels = "==0.13.5"
streamlit = "==1.38.0"
tbats = "==1.1.3"
tenacity = "==8.5.0"
threadpoolctl = "==3.1.0"
thrift = "==0.20.0"
toml = "==0.10.2"
tomli = "==2.2.1"
tomlkit = "==0.13.2"
tornado = "==6.2"
tqdm = "==4.66.1"
traitlets = "==5.9.0"
trove-classifiers = "==2025.5.9.12"
typer = "==0.4.2"
types-Deprecated = "==1.2.9"
typing_extensions = "==4.12.2"
tzdata = "==2024.1"
urllib3 = "==1.26.19"
virtualenv = "==20.31.2"
watchdog = "==4.0.2"
wcwidth = "==0.2.6"
Werkzeug = "==2.2.2"
wrapt = "==1.16.0"
yapf = "==0.31.0"
zipp = "==3.11.0"
zstandard = "==0.23.0"
pydantic_settings = "*"
dtaidistance = "*"
