[tool.poetry]
name = "offline-ab"
version = "0.0.1"
description = "This module is intended for evaluation of offline experiments and is purely exploratory in nature."
authors = ["Mikhail Repin <repin.mihail.09@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.3"
pytest = "7.2.0"
pytest-xdist = "^3.2.1"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["*.ipynb"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "==1.3.3"
numpy = "==1.24.3"
plotly = "==5.23.0"
pyspark = "==3.1.2"
scikit-learn = "==1.3.2"
streamlit = "==1.38.0"
